# proc-grapher

./: .gitignore  DEPLOYMENT.md  README.md
.github/workflows/: deploy-pages.yml  test-build.yml
backend/: main.py  pyproject.toml  start.sh
frontend/: index.html  main.js  package-lock.json  package.json  start.sh  vite.config.js
