[tool.poetry]
name = "proc-grapher-backend"
version = "0.1.0"
description = "System monitoring backend for proc-grapher"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
psutil = "^5.9.6"
pydantic = "^2.5.0"
python-multipart = "^0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 